--- a/canvas.html
+++ b/canvas.html
@@ -11,7 +11,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      cursor: url('./cursor/red.png') 0 0, auto;
+      cursor: crosshair;
     }
 
 
@@ -37,9 +37,21 @@
     .pixel {
       width: 16px;
       height: 16px;
-      border: none;
+      border: 1px solid #ccc;
       background-color: whitesmoke;
     }
+
+    .clearButton {
+      display: inline-block;
+      padding: 2px 6px;
+      font-size: 16px;
+      background-color: white;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: 5px;
+    }
+ 
 
     * {
       cursor: inherit;
@@ -63,7 +75,7 @@
   </div>
 
   <div id="artBoard" class="pixel-art"></div>
-  <button id="clearButton">すべて消す</button>
+  <button class ="clearButton" id="clearButton">すべて消す</button>
 
 
   <script>
