大きさ変えた

--- a/canvas.html
+++ b/canvas.html
@@ -51,7 +51,11 @@
       cursor: pointer;
       margin-top: 5px;
     }
- 
+    h2 {
+      margin-top: 10px;
+      margin-bottom: 5px;
+    }
+
 
     * {
       cursor: inherit;
