--- a/canvas.html
+++ b/canvas.html
@@ -50,7 +50,22 @@
       border-radius: 4px;
       cursor: pointer;
       margin-top: 5px;
+      margin-left: auto;
+      margin-right: auto;
     }
+
+    .saveButton {
+      display: inline-block;
+      padding: 2px 6px;
+      font-size: 16px;
+      background-color: white;
+      border: 1px solid black;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: 5px;
+      margin-left: 100px;
+    }
+
     h2 {
       margin-top: 10px;
       margin-bottom: 5px;
@@ -79,9 +94,10 @@
   </div>
 
   <div id="artBoard" class="pixel-art"></div>
-  <button class ="clearButton" id="clearButton">すべて消す</button>
-  <button id="saveButton" class="clearButton">画像として保存</button>
-
+  <div>
+    <button class ="clearButton" id="clearButton">すべて消す</button>
+    <button id="saveButton" class="saveButton">画像として保存</button>
+  </div>
 
 
   <script>
